--- a/crm-project/client/src/assets/custom.scss
+++ b/crm-project/client/src/assets/custom.scss
@@ -14,11 +14,11 @@
 }
 
 #main-body {
-  min-width: 90vh;
+  min-height: 90vh;
 }
 
 .card-img-top {
-  widows: 100%;
+  width: 100%;
   height: 20rem;
   object-fit: cover;
 }
